<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TestActivity">
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/searchtext"
        android:gravity="center"
        android:id="@+id/tvTile"/>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/tvTile"
        app:layout_constraintEnd_toEndOf="@+id/tvTile"
        app:layout_constraintStart_toStartOf="@+id/tvTile"
        android:backgroundTint="@color/white"
        android:text="@string/title"
        android:id="@+id/btnButton"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/btnButton"
        app:layout_constraintEnd_toEndOf="@+id/btnButton"
        app:layout_constraintStart_toStartOf="@+id/btnButton"
        android:backgroundTint="@color/white"
        android:text="@string/body"
        android:id="@+id/btnButton2"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/btnButton2"
        app:layout_constraintEnd_toEndOf="@+id/btnButton2"
        app:layout_constraintStart_toStartOf="@+id/btnButton2"
        android:backgroundTint="@color/white"
        android:text="@string/save"
        android:id="@+id/btnButton3"/>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/btnButton3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>